welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:15: error: ')' expected but 'if' found.
    if (!color) {recule(); gauche()}
    ^